--- a/etc/init/assets/brew/Brewfile
+++ b/etc/init/assets/brew/Brewfile
@@ -58,7 +58,7 @@ cask 'karabiner'
 cask 'keycast'
 cask 'kobito'
 cask 'macdown'
-cask 'mactex'
+#cask 'mactex'
 cask 'macvim'
 cask 'mailbox'
 cask 'messenger'
