--- a/.tmux.conf
+++ b/.tmux.conf
@@ -114,15 +114,15 @@ set-option -g status-right-length 90
 set-option -g status-left 'tmux:[#P]'
 
 # Contents right
-set-option -g status-right "#(tmux show-options -g prefix) [%Y-%m-%d(%a) %H:%M]"
+#set-option -g status-right "#(tmux show-options -g prefix) [%Y-%m-%d(%a) %H:%M]"
 #if "type battery.sh" "set -g status-right '#(tmux show-options -g prefix) #(battery.sh -t) [%Y-%m-%d(%a) %H:%M]'"
 #if "which battery.sh" "set -g status-right '#(which get_ssid.sh >/dev/null && get_ssid.sh) #(battery.sh) [%Y-%m-%d(%a) %H:%M]'"
 
 #set-option -g status-right '#(which get_ssid.sh >/dev/null && get_ssid.sh) #(which battery.sh >/dev/null && battery.sh -c tmux) [%Y-%m-%d(%a) %H:%M]'
-#set-option -g status-right '#(get_ssid) #(battery -c tmux) [%Y-%m-%d(%a) %H:%M]'
+set-option -g status-right '#(get_ssid) #(battery -c tmux) [%Y-%m-%d(%a) %H:%M]'
 
 #set-option -g status-right '#[fg=white]#(wifi)#[default] #(battery -c tmux) [%Y-%m-%d(%a) %H:%M]'
-set-option -g status-right '#[fg=white]#(wifi)#[default] #(battery --tmux) [%Y-%m-%d(%a) %H:%M]'
+#set-option -g status-right '#[fg=white]#(wifi)#[default] #(battery --tmux) [%Y-%m-%d(%a) %H:%M]'
 
 # Enable utf-8 on statusbar
 set-option -g status-utf8 on
